@@ -1,3 +1,4 @@
 # Ignorer les fichiers servant à stocker l'environnement de inist-tools
 /conf/.it_env_*
 /proxypac/proxy.pac
+/env
